# draftDoctor

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_main.cpp
include/: apriori.hpp  fpgrowth.hpp  utils.hpp
src/: apriori.cpp  fpgrowth.cpp  main.cpp  utils.cpp
tests/: CMakeLists.txt
